--- a/.github/workflows/nextjs.yml
+++ b/.github/workflows/nextjs.yml
@@ -79,6 +79,10 @@ jobs:
         uses: actions/upload-pages-artifact@v2
         with:
           path: ./out
+          name: github-pages
+          retention-days: 1
+        env:
+          GITHUB_PAGES: true
 
   # Deployment job
   deploy:
